# Embedded_SW_Contest

ISP/: CMakeLists.txt  ISP_socket.cpp
Motor/: Motor.ino
Qt/: Resources.qrc  alarm.cpp  alarm.h  dht11_lx3.cpp  dht11_lx3.h  mainwidget.cpp  mainwidget.h  mainwidget.ui  page_1.cpp  page_1.h  page_1.ui  page_2.cpp  page_2.h  page_2.ui  page_3.cpp  page_3.h  page_3.ui  page_4.cpp  page_4.h  page_4.ui  project  project.pro  socketclient.cpp  socketclient.h  temp.db  timer.cpp  timer.h
Serial/: Serial_socket.c  uart.c  uart.h
Server/: Main_server.c  idpasswd.txt
